# mie443

./: README.md
mie443_contest1/: CMakeLists.txt  README.md  package.xml
mie443_contest1/final maps/: map_g6_t1.pgm  map_g6_t2.pgm
mie443_contest1/helpers/: sampleArray.txt  transform1dto2d.py
mie443_contest1/launch/: gmapping.launch
mie443_contest1/old/: old_methods.cpp  states.cpp
mie443_contest1/src/: Callbacks.cpp  Movement.cpp  arrays  arrays.cpp  contest1.cpp  contest1_prev.cpp  gmap_to_index.cpp  grid_position.cpp  old  states.cpp  test.cpp  world_position.cpp
mie443_contest1/worlds/: world_2.world  world_3.world  world_4.world
mie443_contest2/: CMakeLists.txt  OUTPUT.txt  README.md
mie443_contest2/include/: boxes.h  descriptor.h  imagePipeline.h
mie443_contest2/launch/: launch_dis.launch  launch_this.launch
mie443_contest2/src/: OUTPUT.txt  SURF_descriptor.cpp  boxes.cpp  contest2.cpp  descriptor.cpp  imagePipeline.cpp  test.cpp
